package ya.school.todoapp.presentation.ui.components.topbars

import androidx.compose.material.icons.Icons
import androidx.compose.material.icons.filled.Close
import androidx.compose.material3.ExperimentalMaterial3Api
import androidx.compose.material3.Icon
import androidx.compose.material3.IconButton
import androidx.compose.material3.TopAppBar
import androidx.compose.material3.TopAppBarDefaults
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.semantics.semantics
import androidx.compose.ui.semantics.testTag
import androidx.compose.ui.tooling.preview.Preview
import ya.school.todoapp.presentation.ui.components.ToDoTextButton
import ya.school.todoapp.presentation.ui.theme.AppTheme

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun FormTopBar(
    onClose: () -> Unit,
    onSave: () -> Unit,
    modifier: Modifier = Modifier
) {
    TopAppBar(
        title = { },
        modifier = modifier,
        navigationIcon = {
            IconButton(onClick = onClose) {
                Icon(
                    imageVector = Icons.Filled.Close,
                    contentDescription = "Закрыть",
                    tint = AppTheme.colors.labelPrimary
                )
            }
        },
        actions = {
            ToDoTextButton(
                text = "Сохранить",
                onClick = onSave,
                modifier = Modifier
                    .semantics {
                        testTag = "save_btn"
                    }
            )
        },
        colors = TopAppBarDefaults.topAppBarColors(
            containerColor = AppTheme.colors.backPrimary
        )
    )
}

@Preview
@Composable
fun FormTopBarPreview() {
    FormTopBar({ }, { })
}