...
    onPickItem: (String) -> Unit,
    modifier: Modifier = Modifier
) {
    LazyColumn(
        modifier = modifier
            .semantics {
                testTag = "todo_list"
            }
    ) {
        itemsIndexed(
            items = tasks,
            key = { _, item -> item.id }
        ) { _, task ->
...
